removing padding as to prevent overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 }
 
 .cell {
-    padding: 10px;
     border: 1px solid black;
     display: flex;
     flex-grow: 1;
